--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <title>Home - APViz</title>
   <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <if lt IE 9>
+ 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	</endif>
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="stylesheet.css" rel="stylesheet"/> <!--Feuille de style-->
   <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 </head>
@@ -11,7 +18,7 @@
   <div class="container-fluid">
 
     <!--Bannière-->
-    <div class="row header">
+    <div class="container-fluid header">
       <header>
         <h1 class="page_title">APViz</h1>
         <h2 class="page_subtitle">Visualisation interactive de données d'activité physique</h2>
@@ -28,15 +35,40 @@
       <div class="part" id="part1">
         <h3>1. Corrélation entre le lieu et l'activité</h3>
         <div class="row">
-          <div class="graph col-sm-6"></div>
-          <div class="explanation col-sm-6"><p>Explications à propos du graphique</p></div>
+          <div class="col-xs-6 graph"><p>[carte]</p></div>
+          <div class="col-xs-6 explanation"><p>Explications à propos du graphique</p></div>
         </div>
       </div>
-      <div class="part" id="part2">
 
+      <div class="part" id="part2">
+        <h3>2. Distribution annuelle et influence de la météo</h3>
+        <div class="row">
+          <div class="col-xs-12 graph"><p>[calendrier annuel]</p></div>
+          <div class="col-xs-6 explanation"><p>[graphique des distances par jour]</p></div>
+          <div class="col-xs-6 explanation"><p>Explications sur les deux graphiques</p></div>
+        </div>
       </div>
-      <div class="part" id="part3"></div>
+
+      <div class="part" id="part3">
+        <h3>3. Plages horaires hebdomadaire et types d'activités</h3>
+        <div class="row">
+          <div id="graph3" class="col-offset-1 col-xs-10 col-offset-1 graph"></div>
+          <div class="col-offset-1 col-xs-10 col-offset-1 graph"><p>[graphique de zoom sur l'activité]</p></div>
+          <div class="col-xs-12 explanation"><p>Explications à propos du graphique</p></div>
+        </div>
+      </div>
+    </div>
+
+    <!--Pied-de-page-->
+    <div class="footer">
+      <footer>
+        <p>Website produced by Caroline Bettinger, Océane Bligand, Jeanne Auvray - 14/02/2019 - Host by GitHub</p>
+      </footer>
     </div>
 </div>
 </body>
 </html>
+
+<!--SCRIPTS-->
+<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="graph3.js"></script>
