--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <h3>2. Distribution annuelle et influence de la météo</h3>
         <div class="row">
           <div class="col-xs-12 graph"><p>[calendrier annuel]</p></div>
+          <div id="graph4" class="col-offset-1 col-xs-10 col-offset-1 graph"></div>
           <div class="col-xs-6 explanation"><p>[graphique des distances par jour]</p></div>
           <div class="col-xs-6 explanation"><p>Explications sur les deux graphiques</p></div>
         </div>
@@ -70,5 +71,6 @@
 </html>
 
 <!--SCRIPTS-->
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="graph3.js"></script>
+<script src="graph4.js"></script>
