--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="part" id="part2">
         <h3>2. Distribution annuelle et influence de la météo</h3>
         <div class="row">
-          <div class="col-xs-12 graph"><p>[calendrier annuel]</p></div>
+          <div id="calendrier" class="col-xs-12 graph"></div>
           <div id="graph4" class="col-offset-1 col-xs-10 col-offset-1 graph"></div>
           <div class="col-xs-6 explanation"><p>[graphique des distances par jour]</p></div>
           <div class="col-xs-6 explanation"><p>Explications sur les deux graphiques</p></div>
