--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <if lt IE 9>
- 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	</endif>
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="part" id="part3">
-        <h3>3. Plages horaires hebdomadaire et types d'activités</h3>
+        <h3>3. Plages horaires hebdomadaire</h3>
         <div class="row">
           <div id="graph3" class="col-offset-1 col-xs-10 col-offset-1 graph"></div>
           <div class="col-offset-1 col-xs-10 col-offset-1 graph"><p>[graphique de zoom sur l'activité]</p></div>
