--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3>2. Plages horaires hebdomadaire</h3>
         <div class="row">
           <div id="graph3" class="col-xs-6"></div>
-          <div id="graph4" class="col-offset-1 col-xs-5"><p></p></div>
+          <div id="graph4" class="col-offset-1 col-xs-5"></div>
           <div class="col-xs-12"><p>Explications à propos du graphique</p></div>
         </div>
       </div>
