--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
       <div class="part" id="part1">
         <div>
           <h3>1. Distribution annuelle et influence de la météo </h3>
-          <p>Sélectionnez la ville :</p>
-        </div>
-        <div>
-          <form>
-              <label><input type="radio" name="layout" value="toutes" checked>&nbsp;&nbsp;Toutes les villes&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              <label><input type="radio" name="layout" value="grenoble">&nbsp;&nbsp;Grenoble&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              <label><input type="radio" name="layout" value="londres">&nbsp;&nbsp;Londres&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              <label><input type="radio" name="layout" value="lyon">&nbsp;&nbsp;Lyon&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              <label><input type="radio" name="layout" value="rennes">&nbsp;&nbsp;Rennes&nbsp;&nbsp;&nbsp;&nbsp;</label>
-          </form>
         </div>
         <div class="row">
           <div id="graph1" class="col-offset-1 col-xs-10 col-offset-1"></div>
-          <div class="col-xs-6"><p>Explications sur les deux graphiques</p></div>
-          <div id="graph2" class="col-xs-6"></div>
+          <div class="col-xs-6">
+            <p>Sélectionnez la ville :</p>
+            <div>
+              <form>
+                  <label><input type="radio" name="layout" value="toutes" checked>&nbsp;&nbsp;Toutes les villes&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                  <label><input type="radio" name="layout" value="grenoble">&nbsp;&nbsp;Grenoble&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                  <label><input type="radio" name="layout" value="londres">&nbsp;&nbsp;Londres&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                  <label><input type="radio" name="layout" value="lyon">&nbsp;&nbsp;Lyon&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                  <label><input type="radio" name="layout" value="rennes">&nbsp;&nbsp;Rennes&nbsp;&nbsp;&nbsp;&nbsp;</label>
+              </form>
+            </div>
+          </div>
+          <div id="graph2" class="col-xs-5"></div>
         </div>
       </div>
 
@@ -57,7 +58,7 @@
         <h3>2. Plages horaires hebdomadaire</h3>
         <div class="row">
           <div id="graph3" class="col-xs-6"></div>
-          <div id="graph4" class="col-offset-1 col-xs-5"><p></p></div>
+          <div id="graph4" class="col-offset-1 col-xs-5"></div>
           <div class="col-xs-12"><p>Explications à propos du graphique</p></div>
         </div>
       </div>
