--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <div class="container-fluid articles">
       <div class="part" id="intro">
         <h3>Introduction</h3>
-        <p>Texte explicatif du projet (contexte, objectifs).</p>
+        <p> Nous cherchons à visualiser comment le rythme de vie d'un étudiant peut impacter son activité physique quotidienne, en particulier la marche. La météo, l'emploi du temps et la localisation sont les facteurs qui ont été pris en compte.</p>
       </div>
 
       <div class="part" id="part1">
         <div>
           <h3>1. Distribution annuelle et influence de la météo </h3>
+		<p>Le calendrier permet de visualiser la distance marchée pour chaque jour. Passez le curseur sur une case du calendrier pour obtenir la distance parcourue. Il est possible de sélectionner une ville, ce qui permet de n'afficher que les valeurs des jours où l'étudiant(e) se trouvait dans cette ville.</p>
         </div>
         <div class="row">
           <div id="graph1" class="col-offset-1 col-xs-10 col-offset-1"></div>
@@ -59,7 +60,7 @@
         <div class="row">
           <div id="graph3" class="col-xs-6"></div>
           <div id="graph4" class="col-offset-1 col-xs-5"></div>
-          <div class="col-xs-12"><p>Explications à propos du graphique</p></div>
+          <div class="col-xs-12"><p>Ce graphique montre l'activité physique et les cours en fonction de l'heure de la journée. Placez le curseur sur un trait pour obtenir les données correspondantes.</p></div>
         </div>
       </div>
     </div>
