--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid articles">
       <div class="part" id="intro">
         <h3>Introduction</h3>
-        <p> Nous cherchons à visualiser comment le rythme de vie d'un étudiant peut impacter son activité physique quotidienne, en particulier la marche. La météo, l'emploi du temps et la localisation sont les facteurs qui ont été pris en compte.</p>
+        <p> Nous cherchons à visualiser de quelle manière le rythme de vie d'un étudiant peut impacter son activité physique quotidienne, en particulier la marche. La météo, l'emploi du temps et la localisation sont les facteurs qui ont été pris en compte.</p>
       </div>
 
       <div class="part" id="part1">
@@ -58,9 +58,10 @@
       <div class="part" id="part2">
         <h3>2. Plages horaires hebdomadaire</h3>
         <div class="row">
+		<div class="col-xs-12"><p>Ce graphique montre l'activité (marche, cours ou examen) en fonction de l'heure de la journée. Placez le curseur sur un trait pour obtenir les données correspondantes.</p></div>
           <div id="graph3" class="col-xs-6"></div>
           <div id="graph4" class="col-offset-1 col-xs-5"></div>
-          <div class="col-xs-12"><p>Ce graphique montre l'activité physique et les cours en fonction de l'heure de la journée. Placez le curseur sur un trait pour obtenir les données correspondantes.</p></div>
+          
         </div>
       </div>
     </div>
