--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
 </head>
 
 <body>
+  <div class="sidenav">
+    <p>Sélectionnez la ville :</p>
+    <div>
+      <form>
+          <label><input type="radio" name="layout" value="toutes" checked>&nbsp;&nbsp;Toutes les villes&nbsp;&nbsp;&nbsp;&nbsp;</label>
+          <label><input type="radio" name="layout" value="grenoble">&nbsp;&nbsp;Grenoble&nbsp;&nbsp;&nbsp;&nbsp;</label>
+          <label><input type="radio" name="layout" value="londres">&nbsp;&nbsp;Londres&nbsp;&nbsp;&nbsp;&nbsp;</label>
+          <label><input type="radio" name="layout" value="lyon">&nbsp;&nbsp;Lyon&nbsp;&nbsp;&nbsp;&nbsp;</label>
+          <label><input type="radio" name="layout" value="rennes">&nbsp;&nbsp;Rennes&nbsp;&nbsp;&nbsp;&nbsp;</label>
+      </form>
+    </div>
+  </div>
   <div class="container-fluid">
+
+  <div id="main">
 
     <!--Bannière-->
     <div class="container-fluid header">
@@ -32,6 +46,8 @@
         <p> Nous cherchons à visualiser de quelle manière le rythme de vie d'un étudiant peut impacter son activité physique quotidienne, en particulier la marche. La météo, l'emploi du temps et la localisation sont les facteurs qui ont été pris en compte.</p>
       </div>
 
+
+
       <div class="part" id="part1">
         <div>
           <h3>1. Distribution annuelle et influence de la météo </h3>
@@ -39,18 +55,7 @@
         </div>
         <div class="row">
           <div id="graph1" class="col-offset-1 col-xs-10 col-offset-1"></div>
-          <div class="col-xs-6">
-            <p>Sélectionnez la ville :</p>
-            <div>
-              <form>
-                  <label><input type="radio" name="layout" value="toutes" checked>&nbsp;&nbsp;Toutes les villes&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                  <label><input type="radio" name="layout" value="grenoble">&nbsp;&nbsp;Grenoble&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                  <label><input type="radio" name="layout" value="londres">&nbsp;&nbsp;Londres&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                  <label><input type="radio" name="layout" value="lyon">&nbsp;&nbsp;Lyon&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                  <label><input type="radio" name="layout" value="rennes">&nbsp;&nbsp;Rennes&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              </form>
-            </div>
-          </div>
+          
           <div id="graph2" class="col-xs-5"></div>
         </div>
       </div>
@@ -72,6 +77,7 @@
         <p>Website produced by Caroline Bettinger, Océane Bligand, Jeanne Auvray - 14/02/2019 - Host by GitHub</p>
       </footer>
     </div>
+</div>
 </div>
 </body>
 </html>
