--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
       <div class="part" id="part1">
         <div>
           <h3>1. Distribution annuelle et influence de la météo </h3>
-		<p>Le calendrier permet de visualiser la distance marchée pour chaque jour. Passez le curseur sur une case du calendrier pour obtenir la distance parcourue. Il est possible de sélectionner une ville, ce qui permet de n'afficher que les valeurs des jours où l'étudiant(e) se trouvait dans cette ville.</p>
+		<p>Le calendrier permet de visualiser la distance marchée pour chaque jour. Passez le curseur sur une case du calendrier pour obtenir la distance parcourue. Il est possible de sélectionner une ville, ce qui permet de n'afficher que les valeurs des jours où l'étudiant(e) se trouvait dans cette ville. </br> Le graphique présente la distance parcourue et la température extérieure en fonction du temps. La sélection d'une ville met en valeur les données correspondant à cette ville.</p>
         </div>
         <div class="row">
-          <div id="graph1" class="col-offset-1 col-xs-10 col-offset-1"></div>
-          
+          <div id="graph1" class="col-xs-5"></div>
+        </div>
+        <div class="row">
           <div id="graph2" class="col-xs-5"></div>
         </div>
       </div>
